STAC-23438 Fix ES config changes